# gmock-global

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
builds/: CMakeCache.txt  Makefile  cmake_install.cmake
builds/samples/: MY_LIB[1]_include.cmake  Makefile  cmake_install.cmake  mylib[1]_include.cmake  plog[1]_include.cmake
include/: main.cpp
include/gmock-global/: gmock-global.h
samples/: CMakeLists.txt
